--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Build your project for production",
+  "name": "Build_your_project_for_production",
   "version": "0.0.0",
   "description": "Build your project for production",
   "license": "MIT",
